OnetoMany örneği eklendi.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -9,6 +9,10 @@
     background: transparent;
 }
 
+.noHeader.ui-datatable table thead tr {
+    display: none;
+}
+
 /****fileupload progressbar görünümü küçültme****/
 .ui-fileupload-content .ui-progressbar {
     width: 40px;
